Categorize resources in list. Order resources for categorization.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
                 tools:listitem="@layout/resource_item"
                 android:visibility="gone"
                 android:layout_width="match_parent"
-                android:background="#EEE"
+                android:background="#DEDEDE"
                 android:layout_height="match_parent" />
 
             <LinearLayout
