--- a/app/src/main/res/layout/resource_item.xml
+++ b/app/src/main/res/layout/resource_item.xml
@@ -1,26 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="1dp"
-    android:clickable="true"
-    android:foreground="?android:attr/selectableItemBackground"
-    app:cardElevation="0dp">
-    <LinearLayout
-        android:padding="@dimen/text_content_margin"
+        android:orientation="vertical">
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/category"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_marginBottom="1dp"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardElevation="0dp">
 
-        <TextView
-            android:id="@+id/resource_name"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="some resource"
-            android:layout_gravity="center_vertical"
-            android:gravity="center_vertical"
-            android:textSize="12dp" />
+        <LinearLayout
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:paddingStart="@dimen/text_content_margin"
+            android:paddingEnd="@dimen/text_content_margin"
+            android:background="#EFEFEF"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    </LinearLayout>
-</android.support.v7.widget.CardView>
+            <TextView
+                android:id="@+id/resource_category"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="unkown"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:textSize="14dp" />
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        app:cardElevation="0dp">
+        <LinearLayout
+            android:padding="@dimen/text_content_margin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/resource_name"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="some resource"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:textSize="12dp" />
+
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
+</LinearLayout>
