--- a/app/src/main/res/layout/resource_item.xml
+++ b/app/src/main/res/layout/resource_item.xml
@@ -10,8 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
-        android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
         app:cardElevation="0dp">
 
         <LinearLayout
@@ -51,14 +49,32 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_access_time"
+                android:layout_marginEnd="5dp"
+                android:tint="#888"/>
+
+            <TextView
+                android:id="@+id/resource_duration"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
+                android:text="200ms"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical"
+                android:textSize="14dp"/>
+
             <TextView
                 android:id="@+id/resource_name"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="some resource"
+                android:ellipsize="middle"
+                android:maxLines="1"
                 android:layout_gravity="center_vertical"
                 android:gravity="center_vertical"
-                android:textSize="12dp" />
+                android:textSize="14dp" />
 
         </LinearLayout>
     </android.support.v7.widget.CardView>
