Added launcher icon. Integrated realmio for history of searches. Refactor for name change.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#DEDEDE"
-    tools:context="io.sjostrom.webresources.MainActivity">
+    tools:context="io.sjostrom.sitesource.MainActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
